syntax = "proto3";
package kyaputen.proto;

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

option java_package = "com.kagaya.kyaputen.proto";
option java_outer_classname = "TaskResultPb";

message TaskResult {
    enum Status {
        IN_PROGRESS = 0;
        FAILED = 1;
        FAILED_WITH_TERMINAL_ERROR = 2;
        COMPLETED = 3;
    }
    string workflow_instance_id = 1;
    string task_id = 2;
    string worker_id = 3;
    TaskResult.Status status = 4;
    map<string, google.protobuf.Value> output_data = 5;
}
